bug fix-hspacing

--- a/static/dash.css
+++ b/static/dash.css
@@ -51,6 +51,7 @@ padding: 10px 40px;
 img
 {
  padding: 20px;
+ margin-left: 70px;
 }
 .lend{
   border: none;
